--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <!-- Разметка основной части -->
 {% block main %}
 
-<div>
+<div class="_content">
     <!-- элемент формы ввода информации -->
     <form method="post">
         <p>
